--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -1,6 +1,7 @@
 = @item.name
 = @item.description
 = @item.kind
+= @item.qualifier
 - unless @item.sizes.nil?
   - @item.sizes.each do |s|
     = s.name
