--- a/app/views/menu/index.html.haml
+++ b/app/views/menu/index.html.haml
@@ -27,28 +27,25 @@
         %br
         = seasonal_pizza.description
         %br
-        - seasonal_pizza.sizes.each do |size|
-          = size.name
-          = size.price
-          •
+          = add_bullets_to_sizes seasonal_pizza.sizes
   .large-8.columns#toppings
     %h2.menu-section
       CREATE YOUR OWN
     .row
-      .large-6.columns
+      .large-6.columns#veggie
         %p
           %b
             VEGETABLE TOPPINGS
           %br
           = add_commas_to_product @veggie_toppings
-      .large-6.columns
+      .large-6.columns#cheese
         %p
           %b
             CHEESE TOPPINGS
           %br
           = add_commas_to_product @cheese_toppings
     .row
-      .large-6.columns
+      .large-6.columns#meat
         %p
           %b
             MEAT TOPPINGS
@@ -60,17 +57,14 @@
       %h2
         PAGLIACCI FAVORITES
 .row
-  - @menu_pizzas.each do |menu_pizzas|
+  - @menu_pizzas.each do |menu_pizza|
     %p.medium-4.large-4.columns
       %b
-        = menu_pizzas.name.upcase
+        = menu_pizza.name.upcase
       %br
-      = menu_pizzas.description
+      = menu_pizza.description
       %br
-      - menu_pizzas.sizes.each do |size|
-        = size.name
-        = size.price
-        •
+        = add_bullets_to_sizes menu_pizza.sizes
 .row
   .large-12.columns#salads
     .menu-section
@@ -84,10 +78,7 @@
       %br
       = salad.description
       %br
-      = salad.sizes.each do |size|
-        = size.name
-        = size.price
-        •
+        = add_bullets_to_sizes salad.sizes
 .row
   .large-4.columns#gelatos
     .menu-section
