add clickable phone numbers

--- a/app/views/layouts/_order_bar.html.haml
+++ b/app/views/layouts/_order_bar.html.haml
@@ -1,6 +1,6 @@
 .row
   .large-6.small-6.columns
-    .order-buttons#right
+    .order-buttons.right
       = link_to 'ORDER ONLINE!', 'pagliacci.com', alt: 'Order Online!'
   .large-6.small-6.columns
     .order-buttons
