--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,5 +1,5 @@
 .row
-  = image_tag 'pag-banner-logo.png', id: 'logo'
+  = link_to image_tag('pag-banner-logo.png', id: 'logo'), '/'
 .row#phone-numbers
   .large-6.small-6.columns
     = link_to '206-727-1717', 'tel:+12067261717', class: 'right'
