fix extended purview on logo link

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,4 +1,4 @@
-.row
+.row#logo-wrapper
   = link_to image_tag('pag-banner-logo.png', id: 'logo'), '/'
 .row#phone-numbers
   .large-6.small-6.columns
