switch to zurb buttons

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,7 +1,8 @@
-.row
+.row#logo-wrapper
   = link_to image_tag('pag-banner-logo.png', id: 'logo'), '/'
 .row#phone-numbers
   .large-6.small-6.columns
-    = link_to '206-727-1717', 'tel:+12067261717', class: 'right'
+    = link_to '206.727.1717', 'tel:+12067261717', class: 'right'
   .large-6.small-6.columns
-    = link_to '425-453-1717', 'tel:+14254531717'
+    = link_to '425.453.1717', 'tel:+14254531717'
+%br
