--- a/app/views/layouts/_order_bar.html.haml
+++ b/app/views/layouts/_order_bar.html.haml
@@ -1,7 +1,6 @@
 .row
   .large-6.small-6.columns
-    .order-buttons.right
-      = link_to 'ORDER ONLINE!', 'pagliacci.com', alt: 'Order Online!'
+    .right
+      = link_to 'ORDER ONLINE', 'pagliacci.com', alt: 'Order Online', class: 'button large'
   .large-6.small-6.columns
-    .order-buttons
-      = link_to 'FIND SLICES!', 'pagliacci.com', alt: 'Find Slices!'
+    = link_to 'FIND SLICES', 'pagliacci.com', alt: 'Find Slices', class: 'button large'
