--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -3,10 +3,18 @@
   margin-right: auto;
   margin-left: auto;
   display: block;
-  position: relative;
+}
+
+#logo-wrapper {
+  height: 200px;
+  width: 163px;
   top: -40px;
+  position: relative;
 }
 
 #phone-numbers a {
   color: white;
+  font-size: 140%;
+  font-weight: 600;
+  text-shadow: 0 0 20px #000;
 }
