--- a/app/views/layouts/_order_bar.html.haml
+++ b/app/views/layouts/_order_bar.html.haml
@@ -1,6 +1,2 @@
-.row
-  .large-6.small-6.columns
-    .right
-      = link_to 'ORDER ONLINE', 'pagliacci.com', alt: 'Order Online', class: 'button large'
-  .large-6.small-6.columns
-    = link_to 'FIND SLICES', 'pagliacci.com', alt: 'Find Slices', class: 'button large'
+#order-bar
+  = link_to 'ORDER ONLINE', 'pagliacci.com', alt: 'Order Online', class: 'button large'
