finish half and half, break item admin

--- a/app/views/orders/_form.html.haml
+++ b/app/views/orders/_form.html.haml
@@ -1,10 +1,8 @@
 = form_tag('/items')
 = hidden_field :order, :id, name: 'item[order_id]'
+= hidden_field :item, :kind, name: 'item[kind]'
 = collection_select :item, :sizes, @item.sizes, :id, :name, {include_blank: 'Select Size', prompt: 'Select Size'}, name: 'item[size_selection]'
-%ul
-- @toppings.each do |t|
-  %li
-    = check_box_tag "#{t.name}", t.id, @item.toppings.include?(t), name: 'item[topping_ids][]'
-    %label
-      = t.name
-= submit_tag 'Add to Order'
+#side_fields.large-12-columns
+  = render 'side_fields'
+.large-12-columns
+  = submit_tag 'Add to Order'
