--- a/app/views/admin/locations/show.html.haml
+++ b/app/views/admin/locations/show.html.haml
@@ -19,8 +19,6 @@
     = @location.address.state
     = @location.address.zip
 
-= link_to 'Back', locations_path
-
-- if policy(@location).update?
-  = link_to 'Edit', edit_location_path(@location)
-  = link_to 'Delete', location_path(@location), method: :delete
+= link_to 'Back', admin_locations_path
+= link_to 'Edit', edit_admin_location_path(@location)
+= link_to 'Delete', admin_location_path(@location), method: :delete
