--- a/app/views/orders/home.html.haml
+++ b/app/views/orders/home.html.haml
@@ -1,2 +1,16 @@
-- @menu_pizzas.each do |p|
-    = link_to "#{p.name}", "add_item?item_id=#{p.id}"
+%h1 Pizzas
+%ul#pizzas
+  - @menu_pizzas.each do |p|
+    %li.small-6.columns
+      = link_to "#{p.name}", "add_item?item_id=#{p.id}"
+      = image_tag 'extra-pepperoni-pizza.jpg'
+%h1 Salads
+%ul
+  - @salads.each do |p|
+    %li
+      = link_to "#{p.name}", "add_item?item_id=#{p.id}"
+%h1 Gelatos
+%ul
+  - @gelatos.each do |p|
+    %li
+      = link_to "#{p.name}", "add_item?item_id=#{p.id}
