--- a/app/views/menu/index.html.haml
+++ b/app/views/menu/index.html.haml
@@ -58,7 +58,7 @@
         PAGLIACCI FAVORITES
 .row
   - @menu_pizzas.each do |menu_pizza|
-    %p.medium-4.large-4.columns
+    %p.medium-4.large-4.columns.menu-subsection
       %b
         = menu_pizza.name.upcase
       %br
@@ -72,7 +72,7 @@
         SALADS
 .row
   - @salads.each do |salad|
-    %p.medium-4.large-3.columns
+    %p.medium-4.large-3.columns.menu-subsection
       %b
         = salad.name.upcase
       %br
