abstract order to own namespace

--- a/app/views/layouts/_order_bar.html.haml
+++ b/app/views/layouts/_order_bar.html.haml
@@ -1,2 +1,2 @@
 #order-bar
-  = link_to 'ORDER ONLINE', '/order', alt: 'Order Online', class: 'button large'
+  = link_to 'ORDER ONLINE', '/order/home', alt: 'Order Online', class: 'button large'
