give order section own layout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,7 @@
 @import 'navbar';
 @import 'reset';
 @import 'welcome';
-@import 'order_bar';
+@import 'order_button';
 @import 'menu';
 @import 'order_home';
+@import 'order';
