--- a/app/views/layouts/order.html.haml
+++ b/app/views/layouts/order.html.haml
@@ -9,17 +9,5 @@
     = csrf_meta_tags
     = favicon_link_tag 'favicon.ico'
   %body
-    - if user_signed_in?
-      = link_to 'Log out', destroy_user_session_path, method: :delete
-    - else
-      = link_to 'Sign in or create an account', new_user_session_path
-    = render 'layouts/header'
-    = render 'layouts/order_button'
     .row#paper
-      = render 'layouts/navbar'
-      .notice
-        = notice
-      .alert
-        = alert
-      .large-12.columns
-        = yield
+      = render 'layouts/order_top_bar'
