--- a/app/views/layouts/order.html.haml
+++ b/app/views/layouts/order.html.haml
@@ -1,13 +1,6 @@
 !!! 5
 %html{html_attrs}
-  %head
-    %meta{name: 'viewport', content: 'width=device-width, initial-scale=1', chatset: 'utf-8'}
-    %title= content_for?(:title) ? yield(:title) : 'Pagliacci Pizza – Seattle Area Pizza Delivery and Catering'
-    = javascript_include_tag 'vendor/modernizr'
-    = stylesheet_link_tag :application, media: 'all'
-    = javascript_include_tag :application
-    = csrf_meta_tags
-    = favicon_link_tag 'favicon.ico'
+  = render 'layouts/head'
   %body
     .row#paper
       = render 'layouts/order_top_bar'
