--- a/app/views/order/orders/_form.html.haml
+++ b/app/views/order/orders/_form.html.haml
@@ -1,6 +1,7 @@
 = form_tag order_items_path
 = hidden_field :order, :id, name: 'item[order_id]'
 = hidden_field :item, :kind, name: 'item[kind]'
+= hidden_field :item, :name, name: 'item[name]'
 = collection_select :item, :sizes, @item.sizes, :id, :name, {include_blank: 'Select Size', prompt: 'Select Size'}, name: 'item[size_selection]'
 - if @item.sides.size != 0
   #side_fields.large-12-columns
